--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/shared/api/server"
+    "dev": "nodemon ./src/shared/api/server",
+    "start": "node ./src/shared/api/server"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +14,14 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "node-telegram-bot-api": "^0.64.0",
+    "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
-    "stripe": "^14.12.0"
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
