--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
     "nodemailer": "^6.9.8",
     "pg": "^8.11.3",
